force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(OR(Date_of_Birth__c = DATE(1900,01,01),Date_of_Birth__c = DATE(2443,01,01)),0
,IF(TODAY() &gt;= DATE(YEAR(TODAY()), MONTH(Date_of_Birth__c), DAY(Date_of_Birth__c)),
    YEAR(TODAY()) - YEAR(Date_of_Birth__c),
    YEAR(TODAY()) - YEAR(Date_of_Birth__c) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>