force-app/main/default/objects/Contact/fields/Authorized_person_of_signature__c.field-meta.xml
<CustomField>
    <fullName>Authorized_person_of_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized person of signature</label>
    <type>Checkbox</type>
</CustomField>