force-app/main/default/objects/Contact/fields/C_AddressLine5_PE__c.field-meta.xml
<CustomField>
    <fullName>C_AddressLine5_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>