force-app/main/default/objects/Contact/fields/C_Country_PE__c.field-meta.xml
<CustomField>
    <fullName>C_Country_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>