force-app/main/default/objects/Contact/fields/C_Province_PE__c.field-meta.xml
<CustomField>
    <fullName>C_Province_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>30</length>
    <type>Text</type>
</CustomField>