force-app/main/default/objects/Contact/fields/C_Zipcode_PE__c.field-meta.xml
<CustomField>
    <fullName>C_Zipcode_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>