force-app/main/default/objects/Contact/fields/Completed_Survey__c.field-meta.xml
<CustomField>
    <fullName>Completed_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed_Survey</label>
    <type>Checkbox</type>
</CustomField>