force-app/main/default/objects/Contact/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contact ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>