force-app/main/default/objects/Contact/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>