force-app/main/default/objects/Contact/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disqualified Reason</label>
    <type>TextArea</type>
</CustomField>