force-app/main/default/objects/Contact/fields/DWH_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DWH_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact End date</label>
    <type>Date</type>
</CustomField>