force-app/main/default/objects/Contact/fields/DWH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DWH_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Start date</label>
    <type>Date</type>
</CustomField>