force-app/main/default/objects/Contact/fields/Group_Contact__c.field-meta.xml
<CustomField>
    <fullName>Group_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Contact</label>
    <type>Checkbox</type>
</CustomField>