force-app/main/default/objects/Contact/fields/ID_Type_PE__c.field-meta.xml
<CustomField>
    <fullName>ID_Type_PE__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alien ID</fullName>
            </value>
            <value>
                <fullName>BRN ID</fullName>
            </value>
            <value>
                <fullName>Citizen ID</fullName>
            </value>
            <value>
                <fullName>Passport ID</fullName>
            </value>
            <value>
                <fullName>Work Permit ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>