force-app/main/default/objects/Contact/fields/Image_formula__c.field-meta.xml
<CustomField>
    <fullName>Image_formula__c</fullName>
    <formula>IMAGE(&quot;https://tmbbank--DEV2--c.cs6.content.force.com/servlet/rtaImage?eid=003N000000lzBlc&amp;feoid=00NN0000001toGv&amp;refid=0EMN0000000CzP6&quot;, &quot;test&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image formula</label>
    <type>Text</type>
</CustomField>