force-app/main/default/objects/Contact/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CR Migrate Contact WBG : use this field for migrate contact from dwh Rcordtype Core Back only.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>