force-app/main/default/objects/Contact/fields/IsTBankData__c.field-meta.xml
<CustomField>
    <fullName>IsTBankData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TBank</label>
    <type>Checkbox</type>
</CustomField>