force-app/main/default/objects/Contact/fields/IsVerified__c.field-meta.xml
<CustomField>
    <fullName>IsVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>