force-app/main/default/objects/Contact/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>