force-app/main/default/objects/Contact/fields/Primary_Phone_Ext_PE__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Ext_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ext.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>