force-app/main/default/objects/Contact/fields/Product_Decision2__c.field-meta.xml
<CustomField>
    <fullName>Product_Decision2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Decision2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>