force-app/main/default/objects/Contact/fields/Product_Decision3__c.field-meta.xml
<CustomField>
    <fullName>Product_Decision3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Decision3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>