force-app/main/default/objects/Contact/fields/Product_Decision__c.field-meta.xml
<CustomField>
    <fullName>Product_Decision__c</fullName>
    <label>Product Decision 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Deposit and Investment</fullName>
            </value>
            <value>
                <fullName>Digital Channel</fullName>
            </value>
            <value>
                <fullName>Domestic Transactional Banking</fullName>
            </value>
            <value>
                <fullName>Fleet card</fullName>
            </value>
            <value>
                <fullName>Hedging : Derivative</fullName>
            </value>
            <value>
                <fullName>Hedging : FX</fullName>
            </value>
            <value>
                <fullName>International Transactional Banking : Export</fullName>
            </value>
            <value>
                <fullName>International Transactional Banking : Import</fullName>
            </value>
            <value>
                <fullName>L/G</fullName>
            </value>
            <value>
                <fullName>Limit setup</fullName>
            </value>
            <value>
                <fullName>Long Term Funding</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PN</fullName>
            </value>
            <value>
                <fullName>Short Term Funding</fullName>
            </value>
            <value>
                <fullName>Supply chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>