force-app/main/default/objects/Contact/fields/ROWID__c.field-meta.xml
<CustomField>
    <fullName>ROWID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ทำเพือเอา Data จาก  CRMDB  เข้า  ไม่มีการเอาไปใช้</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ROWID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>