force-app/main/default/objects/Contact/fields/TMB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_ID__c</fullName>
    <description>External ID for Retail Contacts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TMB Customer ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>