force-app/main/default/objects/Contact/fields/Value_Style__c.field-meta.xml
<CustomField>
    <fullName>Value_Style__c</fullName>
    <label>Value Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Awareness</fullName>
            </value>
            <value>
                <fullName>Risk Awareness</fullName>
            </value>
            <value>
                <fullName>Relationship Awareness</fullName>
            </value>
            <value>
                <fullName>Principle Awarness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>