force-app/main/default/objects/Contact/recordTypes/Core_bank.recordType-meta.xml
<RecordType>
    <fullName>Core_bank</fullName>
    <active>true</active>
    <label>Core bank</label>
</RecordType>