force-app/main/default/objects/Contact/recordTypes/Retail_Contact.recordType-meta.xml
<RecordType>
    <fullName>Retail_Contact</fullName>
    <active>true</active>
    <label>Retail Contact</label>
</RecordType>