force-app/main/default/objects/Contact/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <label>Salesforce</label>
</RecordType>