force-app/main/default/objects/Contact/validationRules/Birthdate_cannot_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_cannot_be_future_date</fullName>
    <active>true</active>
    <description>Expect core bank</description>
    <errorConditionFormula>AND ( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
)
,
 
Today() &lt;  Date_of_Birth__c )</errorConditionFormula>
    <errorMessage>Not allow to select date of birth in the future</errorMessage>
</ValidationRule>