force-app/main/default/objects/Contact/validationRules/PE_Check_CitizenID.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Check_CitizenID</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
)
,IF(TEXT(ID_Type_PE__c) &lt;&gt; &quot;Citizen ID&quot;, FALSE, 
	IF( LEN(ID_Number_PE__c) &gt; 13, TRUE, 
	IF( VALUE(MID(ID_Number_PE__c,13,1)) = MOD(11- MOD(( VALUE(MID(ID_Number_PE__c,1,1))* 13 + VALUE(MID(ID_Number_PE__c,2,1))* 12 + VALUE(MID(ID_Number_PE__c,3,1))* 11 + 
VALUE(MID(ID_Number_PE__c,4,1))* 10 + 
VALUE(MID(ID_Number_PE__c,5,1))* 9 + 
VALUE(MID(ID_Number_PE__c,6,1))* 8 + 
VALUE(MID(ID_Number_PE__c,7,1))* 7 + 
VALUE(MID(ID_Number_PE__c,8,1))* 6 + 
VALUE(MID(ID_Number_PE__c,9,1))* 5 + 
VALUE(MID(ID_Number_PE__c,10,1))* 4 + VALUE(MID(ID_Number_PE__c,11,1))* 3 + 
VALUE(MID(ID_Number_PE__c,12,1))* 2 
),11),10), FALSE, TRUE))))</errorConditionFormula>
    <errorDisplayField>ID_Number_PE__c</errorDisplayField>
    <errorMessage>Invalid Citizen ID</errorMessage>
</ValidationRule>