force-app/main/default/objects/Contact/validationRules/PE_Validate_Fax_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Validate_Fax_Length</fullName>
    <active>true</active>
    <description>Fax number is too large: length 18 digits</description>
    <errorConditionFormula>AND ( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
),LEN( Fax ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Fax number is too large: length 18 digits</errorMessage>
</ValidationRule>