force-app/main/default/objects/Contact/validationRules/PE_Validate_Length_Last_name.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Validate_Length_Last_name</fullName>
    <active>true</active>
    <description>Validate last name not greater than 40</description>
    <errorConditionFormula>AND ( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
), LEN( LastName ) &gt; 40)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Last name is too large: length 40 digits</errorMessage>
</ValidationRule>