force-app/main/default/objects/Contact/validationRules/PE_Validate_Mobile_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Validate_Mobile_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
), LEN( MobilePhone ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile number is too large: length 18 digits</errorMessage>
</ValidationRule>