force-app/main/default/objects/Contact/validationRules/PE_Validate_Phone_length.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Validate_Phone_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
AND( RecordType.Name &lt;&gt; &quot;Core bank&quot;,
NOT(CONTAINS(RecordType.Name, &apos;Retail&apos;)
)
), LEN( HomePhone ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>Office number is too large: length 18 digits</errorMessage>
</ValidationRule>